--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-# PixelArtmaker
 <!DOCTYPE html>
 
 <html>
@@ -9,7 +8,7 @@
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="body.css">
 </head>
 
 <body>
@@ -41,7 +40,9 @@
 
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
- <script src="designs.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <script src="design.js"></script>
+    
 </body>
 </html>
